--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,66 +1,352 @@
+/*..............................*/
+/*esquema y configuración básica*/
+/*..............................*/
 *{
 	padding: 0;
 	margin: 0;
 }
 
 body{
-	background-color: rgba(170, 122, 57, 0.3);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Mate', serif;
 }
 
 .contenedor{
-	background-color: #ccc;
-	width: 90%;
-	max-width: 1124px;
+	width: 100%;
+	max-width: 1800px;
 	margin: 0 auto;
 
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(5, auto);
-	grid-gap: 10px;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(7, auto);
+	grid-gap: 0px;
 
-	grid-template-areas: "header header header"
-						 "nav nav nav"
-						 "contenido contenido sidebar"
-						 "noticia1 noticia2 sidebar"
-						 "footer footer footer";
+	grid-template-areas: "header header header header"
+						 "slider slider slider slider"
+						 "titulo titulo titulo titulo"
+						 "plato1 plato1 plato2 plato2"
+						 "tarjeta tarjeta tarjeta tarjeta"
+						 "sponsor sponsor sponsor sponsor"
+						 "footer footer footer footer";
 }
 
+/*............................*/
+/*					header					  */
+/*............................*/
 .contenedor .cabeceraPrincipal{
 	grid-area: header;
-	background-color: #333;
+	background: linear-gradient(#50928B, #72E0D4);
+	display: flex;
+	justify-content: space-between;
 }
 
-.contenedor .menuPrincipal{
-	grid-area: nav;
-	background-color: #250;
+.contenedor .cabeceraPrincipal .logotipo{
+	padding: 10px 40px;
 }
 
-.contenedor .contenido{
-	grid-area: contenido;
-	background-color: #275;	
+/*............................*/
+/*		 	Menú Principal	      */
+/*............................*/
+.contenedor .cabeceraPrincipal .menuPrincipal{
+	display: flex;
+	align-items: center;
+	margin: 0em 13em;
 }
 
-.contenedor .sidebar{
-	grid-area: sidebar;
-	background-color: #375;	
+.contenedor .cabeceraPrincipal .menuPrincipal a{
+	text-decoration: none;
+	padding: 0px 50px;
+	color: white;
+	font-size: 20px;
+	font-family: 'Istok Web', sans-serif;
 }
 
-.contenedor .noticia1{
-	grid-area: noticia1;
-	background-color: #455;	
+.contenedor .cabeceraPrincipal .menuPrincipal a:hover{
+	background-color: #B4D7D3;
+	color: #176159;
+	border-radius: 50%;
 }
 
-.contenedor .noticia2{
-	grid-area: noticia2;
-	background-color: #450;	
+/*............................*/
+/*	   Slider Principal	      */
+/*............................*/
+.contenedor .sliderPrincipal{
+	grid-area: slider;
 }
 
+.contenedor .sliderPrincipal img{
+	width: 100%;	
+}
+
+/*............................*/
+/*	   			Platos	      	*/
+/*............................*/
+.contenedor .titulo{
+	grid-area: titulo;
+	text-align: center;
+}
+
+.contenedor .titulo h2{
+	font-size: 45px;
+	padding: 10px 0px;
+	font-weight: 100;
+}
+
+.contenedor .plato1, .contenedor .plato2{
+	grid-area: plato1;
+	justify-content: space-between;
+	position: relative;
+  display: inline-block;
+	text-align: center;
+}
+
+.contenedor .plato2{
+	grid-area: plato2;
+}
+
+.contenedor .plato1 h3, .contenedor .plato2 h3{
+	padding: 20px 20px;
+	font-size: 30px;
+	font-weight: 100;
+	color: #FFFF;
+	position: absolute;
+	bottom: 20%;
+  left: 3%;
+}
+
+.contenedor .plato1 p, .contenedor .plato2 p{
+	padding: 20px 50px 20px 20px;
+	font-size: 23px;
+	position: absolute;
+	bottom: -1%;
+  left: 3%;
+	text-align: left;
+	color: #E3E3E3;
+}
+
+.contenedor .plato1 img, .contenedor .plato2 img{
+	width: 95%;
+}
+
+/*............................*/
+/*	   			Tarjetas      	  */
+/*............................*/
+.contenedor .tarjeta{
+	grid-area: tarjeta;
+	display: flex;
+  justify-content: space-between;
+	padding: 4em 0px;
+}
+
+.tarjeta .tarjeta1, .tarjeta .tarjeta2, .tarjeta .tarjeta3, .tarjeta .tarjeta4{
+	text-align: center;
+}
+
+.tarjeta .tarjeta1 img, .tarjeta .tarjeta2 img, .tarjeta .tarjeta3 img, .tarjeta .tarjeta4 img{
+	width: 75%;
+}
+
+.tarjeta .tarjeta1 h3, .tarjeta .tarjeta2 h3, .tarjeta .tarjeta3 h3, .tarjeta .tarjeta4 h3{
+	font-size: 30px;
+	font-weight: 100;
+}
+
+.tarjeta .tarjeta1 p, .tarjeta .tarjeta2 p, .tarjeta .tarjeta3 p, .tarjeta .tarjeta4 p{
+	padding: 0px 50px 10px 50px;
+	font-size: 20px;
+}
+
+/*............................*/
+/*	   			Sponsor	      	  */
+/*............................*/
+.contenedor .sponsor{
+	grid-area: sponsor;
+	position: relative;
+}
+
+.contenedor .sponsor .degradado{
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(#50928B, #EBAE81);
+	opacity: 60%;
+	position: absolute;
+}
+
+.contenedor .sponsor img{
+	width: 100%;
+	height: 100%;
+}
+
+.sponsor .contenedor1 h3, .sponsor .contenedor2 h3, .sponsor .contenedor3 h3, .sponsor .contenedor4 h3{
+	padding: 20px 20px;
+	font-size: 25px;
+	font-weight: 100;
+	color: #FFFF;
+	position: absolute;
+	font-family: 'Istok Web', sans-serif;
+	font-weight: bold;
+}
+
+.sponsor .contenedor1 h3{
+	top: 12%;
+  left: 3%;
+}
+
+.sponsor .contenedor1 p{
+	padding: 20px 43em 20px 20px;
+	font-size: 20px;
+	position: absolute;
+	top: 18%;
+  left: 3%;
+	text-align: left;
+	color: #2D2D2D;
+	font-style: italic;
+	font-weight: bold;
+}
+
+.sponsor .contenedor2 h3{
+	top: 12%;
+  right: 21%;
+}
+
+.sponsor .contenedor2 ul{
+	padding: 20px 25px 20px 20px;
+	font-size: 20px;
+	position: absolute;
+	top: 17%;
+  right: 35%;
+	text-align: left;
+	color: #2D2D2D;
+	font-style: italic;
+	font-weight: bold;
+}
+
+.sponsor .contenedor3 h3{
+	bottom: 28%;
+  left: 3%;
+}
+
+.sponsor .contenedor3 .lista1, .sponsor .contenedor3 .lista2{
+	padding: 20px 20px 20px 50px;
+	font-size: 20px;
+	position: absolute;
+	bottom: 15%;
+  left: 3%;
+	text-align: left;
+	color: #2D2D2D;
+	font-style: italic;
+	font-weight: bold;
+}
+
+.sponsor .contenedor3 .lista2{
+	left: 15%;
+}
+
+.sponsor .contenedor4 h3{
+	bottom: 28%;
+	right: 32%;
+}
+
+.sponsor .contenedor4 .redesSociales{
+	padding: 2em;
+	font-size: 50px;
+	position: absolute;
+	display: flex;
+	bottom: 3%;
+  	right: 24%;
+}
+
+.sponsor .contenedor4 .redesSociales a{
+	color: black;
+	margin: 10px;
+	text-decoration: none;
+	background-color: white;
+	border-radius: 100%;
+	width: 50px;
+	height: 50px;
+}
+
+/*............................*/
+/*	   	  Pie Página      	  */
+/*............................*/
 .contenedor .piePagina{
 	grid-area: footer;
-	background-color: #475;	
+	background-color: #EBC581;
 }
 
+.contenedor .piePagina .derechos{
+	padding: 2em;
+	text-align: center;
+}
+
+.contenedor .piePagina .derechos h6{
+	font-size: 27px;
+	font-weight: 100;
+}
+
+/*............................*/
+/*	   			Botones	      	  */
+/*............................*/
+.btn {
+  background-color: #5C739C;
+  border: none;
+  padding: 20px 85px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Mate', serif;
+  font-size: 55px;
+  display: inline-block;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 50px;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+}
+
+.btn:hover {
+  background-color: #BBC7DC;
+  color: #C27E4C;
+  border: 3px solid #5C739C;
+}
+
+.btnIcon{
+	background-color: transparent;
+	border: 0px;
+}
+
+.icono {
+	display: inline-block;
+	color: white;
+	cursor: pointer;
+	opacity: 75%;
+	font-size: 25px;
+}
+
+.derecha{
+	text-align: right;
+	padding: 10px;
+	position: absolute; 
+	right: 2.2%;
+	bottom: 0%;
+}
+
+/*............................*/
+/*	   	Personalizados	      */
+/*............................*/
+.colorMarron{
+	color: #935C33;
+}
+
+.colorArtic{
+	color: #EBAE81;
+}
+
+.mayusculas{
+	text-transform: uppercase;
+}
+
+/*
 @media only screen and (max-width: 600px) {
   body {
     background-color: red;
@@ -77,3 +363,4 @@ body{
 						 "footer footer";
   }
 }
+*/
