--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,6 +44,44 @@ body{
 }
 
 /*............................*/
+/*						main					  */
+/*............................*/
+main{
+	grid-area: slider;
+	margin: 0 auto;
+	width: 90%;
+	padding: 2em 0;
+}
+
+main h2{
+	font-size: 2em;
+}
+
+main p{
+	font-size: 1em;
+	line-height: 28px;
+}
+
+/*............................*/
+/*	   	  Formularios      	  */
+/*............................*/
+main .grupoinput{
+	padding: 0.5em 0;
+}
+
+.grupoinput label{
+	display: block;
+	font-size: 1em;
+}
+
+.grupoinput input[type=text], .grupoinput input[type=email], .grupoinput input[type=number], .grupoinput input[type=date]{
+	width: 90%;
+	padding: 15px 20px;
+	border-radius: 4px;
+	border: 1px solid #ccc;
+}
+
+/*............................*/
 /*		 	Menú Principal	      */
 /*............................*/
 .contenedor .cabeceraPrincipal .menuPrincipal{
@@ -87,13 +125,12 @@ body{
 
 .contenedor .titulo h2{
 	font-size: 45px;
-	padding: 10px 0px;
+	padding: 0.5em 0px;
 	font-weight: 100;
 }
 
 .contenedor .plato1, .contenedor .plato2{
 	grid-area: plato1;
-	justify-content: space-between;
 	position: relative;
   display: inline-block;
 	text-align: center;
@@ -105,26 +142,26 @@ body{
 
 .contenedor .plato1 h3, .contenedor .plato2 h3{
 	padding: 20px 20px;
-	font-size: 30px;
+	font-size: 25px;
 	font-weight: 100;
 	color: #FFFF;
 	position: absolute;
 	bottom: 20%;
-  left: 3%;
+  left: 10%;
 }
 
 .contenedor .plato1 p, .contenedor .plato2 p{
 	padding: 20px 50px 20px 20px;
-	font-size: 23px;
+	font-size: 20px;
 	position: absolute;
 	bottom: -1%;
-  left: 3%;
+  left: 10%;
 	text-align: left;
 	color: #E3E3E3;
 }
 
 .contenedor .plato1 img, .contenedor .plato2 img{
-	width: 95%;
+	width: 85%;
 }
 
 /*............................*/
@@ -134,7 +171,7 @@ body{
 	grid-area: tarjeta;
 	display: flex;
   justify-content: space-between;
-	padding: 4em 0px;
+	padding: 6em 0px;
 }
 
 .tarjeta .tarjeta1, .tarjeta .tarjeta2, .tarjeta .tarjeta3, .tarjeta .tarjeta4{
@@ -145,14 +182,31 @@ body{
 	width: 75%;
 }
 
+.tarjeta .cuadro{
+	width: 286px;
+	height: 500px;
+	background: radial-gradient(#ac5d5d00, #b2282800);
+	position: absolute;
+	margin: auto 46px;
+}
+
+.tarjeta .cuadro:hover{
+	width: 286px;
+	height: 500px;
+	background: radial-gradient(#d7d7d700, #505050);
+	position: absolute;
+	margin: auto 46px;
+}
+
 .tarjeta .tarjeta1 h3, .tarjeta .tarjeta2 h3, .tarjeta .tarjeta3 h3, .tarjeta .tarjeta4 h3{
-	font-size: 30px;
+	margin: 10px 0px 20px 0px;
+	font-size: 25px;
 	font-weight: 100;
 }
 
 .tarjeta .tarjeta1 p, .tarjeta .tarjeta2 p, .tarjeta .tarjeta3 p, .tarjeta .tarjeta4 p{
-	padding: 0px 50px 10px 50px;
-	font-size: 20px;
+	padding: 0px 50px 25px 50px;
+	font-size: 18px;
 }
 
 /*............................*/
@@ -167,7 +221,7 @@ body{
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(#50928B, #EBAE81);
-	opacity: 60%;
+	opacity: 80%;
 	position: absolute;
 }
 
@@ -195,7 +249,7 @@ body{
 	padding: 20px 43em 20px 20px;
 	font-size: 20px;
 	position: absolute;
-	top: 18%;
+	top: 20%;
   left: 3%;
 	text-align: left;
 	color: #2D2D2D;
@@ -212,7 +266,7 @@ body{
 	padding: 20px 25px 20px 20px;
 	font-size: 20px;
 	position: absolute;
-	top: 17%;
+	top: 20%;
   right: 35%;
 	text-align: left;
 	color: #2D2D2D;
@@ -229,7 +283,7 @@ body{
 	padding: 20px 20px 20px 50px;
 	font-size: 20px;
 	position: absolute;
-	bottom: 15%;
+	bottom: 12%;
   left: 3%;
 	text-align: left;
 	color: #2D2D2D;
@@ -251,7 +305,7 @@ body{
 	font-size: 50px;
 	position: absolute;
 	display: flex;
-	bottom: 3%;
+	bottom: 1%;
   	right: 24%;
 }
 
@@ -310,6 +364,26 @@ body{
   border: 3px solid #5C739C;
 }
 
+.btn1 {
+  background-color: #5C739C;
+  border: none;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Mate', serif;
+  font-size: 1em;
+  display: inline-block;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 25px;
+}
+
+.btn1:hover {
+  background-color: #BBC7DC;
+  color: #C27E4C;
+  border: 1px solid #5C739C;
+}
+
 .btnIcon{
 	background-color: transparent;
 	border: 0px;
@@ -320,14 +394,14 @@ body{
 	color: white;
 	cursor: pointer;
 	opacity: 75%;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 .derecha{
 	text-align: right;
 	padding: 10px;
 	position: absolute; 
-	right: 2.2%;
+	right: 7%;
 	bottom: 0%;
 }
 
@@ -344,6 +418,10 @@ body{
 
 .mayusculas{
 	text-transform: uppercase;
+}
+
+.colorRojo{
+	color: red;
 }
 
 /*
